# motia

./: .gitattributes  .gitignore  AGENTS.md  ATOMIC_STATE_IMPLEMENTATION_PLAN.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED_GUIDE.md  INTEGRATION_ANALYSIS.md  INTEGRATION_EXAMPLE.md  ISSUE_787_ANALYSIS.md  ISSUE_787_FIX_SUMMARY.md  LICENSE  MERGE_INSTRUCTIONS.md  MIGRATION_GUIDE.md  MONOREPO-README.md  Makefile  PROJECT_EVALUATION_TEMPLATE.md  PR_FIX_PLAN.md  README.md  SKILL.md  STRUCTURE.md  WINDOWS_SETUP.md  biome.json  fix-windows-scripts.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup-windows.ps1  tarpaulin.toml
.github/: WORKFLOWS.md
.husky/: pre-commit
motia-py/playground/: .env.example  README.md  pyproject.toml
motia-py/playground/steps/api_steps/: form_data_step.py  sse_step.py
motia-py/playground/steps/conditions/: api_with_conditions.step.py  cron_with_condition.step.py  mixed_triggers.step.py  mixed_triggers_step.py  multiple_conditions.step.py  multiple_conditions_step.py  single_condition.step.py
motia-py/playground/steps/greetings/: delete.step.py  get.step.py  get_step.py  greet.step.py  list.step.py  list_step.py  summary.step.py  summary_step.py
motia-py/playground/steps/multi_trigger/: dual_trigger.step.py  multiple_apis.step.py  multiple_apis_step.py  multiple_events.step.py  multiple_events_step.py  single_api.step.py  single_cron.step.py  single_cron_step.py  single_event.step.py  single_event_step.py  triple_trigger.step.py  triple_trigger_step.py
motia-py/playground/steps/otel_example/: create_order.step.py  notify_order.step.py  notify_order_step.py  process_order.step.py
(+700 files in other folders)
