[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motia-example"
version = "0.0.2"
description = "Motia Framework Example"
authors = [{ name = "III" }]
requires-python = ">=3.10"

dependencies = [
    "iii-motia[otel]",
    "iii-sdk==0.2.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "watchdog>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["steps"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
iii-motia = { path = "../packages/motia" }
