[project]
name = "motia-example"
version = "0.0.2"
description = "Motia Framework Example"
authors = [{ name = "III" }]
requires-python = ">=3.10"

dependencies = [
    "motia[otel]",
    "iii-sdk @ git+https://github.com/iii-hq/sdk.git@main#subdirectory=packages/python/iii",
    "pydantic>=2.0",
]

[tool.uv.sources]
motia = { path = "../packages/motia" }
